# esp32-WOL

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  http-server.c  rainmaker.c
